--- a/Samples/BlazorProgressSample/BlazorProgressSample.csproj
+++ b/Samples/BlazorProgressSample/BlazorProgressSample.csproj
@@ -5,13 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BlazorStyled" Version="1.1.0" />
+    <PackageReference Include="BlazorStyled" Version="1.2.0" />
+    <PackageReference Include="DataJuggler.Blazor.Components" Version="1.1.1" />
     <PackageReference Include="DataJuggler.RandomShuffler.Core" Version="1.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\DataJuggler.Blazor.Components.csproj" />
   </ItemGroup>
 
 </Project>
