--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -22,7 +22,10 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>1.4.5 - I changed the XPosition and YPosition values to set XPositionStyle and YPositionStyle instead of
+    <PackageReleaseNotes>1.4.6 - I made a breaking change to the Sprie component, but now when you set Sprite.Height or Width, it translates to HeightStyle = Height + "vh" and setting Width sets WidthStyle to Width + "%".
+Previously it was set to HeightPixels and WidthPixels, and this causes zoom differences in a site.
+
+1.4.5 - I changed the XPosition and YPosition values to set XPositionStyle and YPositionStyle instead of
 XPositionPixels and YPositionPixels, because I changed the value to use % for X and vh for Y to make
 it scale better. Using px makes cites appear differently depending on zoom values.
 
@@ -93,8 +96,8 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>1.4.5</Version>
-    <AssemblyVersion>1.4.5.0</AssemblyVersion>
+    <Version>1.4.6</Version>
+    <AssemblyVersion>1.4.6.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -115,9 +118,9 @@ Now is the time to break anything.
 
   <ItemGroup>
     <PackageReference Include="BlazorStyled" Version="2.2.0" />
-    <PackageReference Include="DataJuggler.UltimateHelper.Core" Version="1.2.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
+    <PackageReference Include="DataJuggler.UltimateHelper.Core" Version="1.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.4" />
   </ItemGroup>
 
 </Project>
