--- a/Samples/BlazorChat/BlazorChat.csproj
+++ b/Samples/BlazorChat/BlazorChat.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="DataJuggler.Blazor.Components" Version="1.4.6" />
     <PackageReference Include="DataJuggler.Core.Cryptography" Version="1.0.11" />
     <PackageReference Include="DataJuggler.RandomShuffler.Core" Version="1.2.5" />
+    <PackageReference Include="HtmlSanitizer" Version="5.0.319" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.ProtectedBrowserStorage" Version="0.1.0-alpha.19521.1" />
   </ItemGroup>
