--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -11,13 +11,6 @@ This project uses a really awesome project called BlazorStyled by Chanen Braunst
 New Version 1.5
 .Net 5.0 is the only supported version going forward.
 
-Version 1.5.1: I accidently marked this project as depreciated, when I was having a temporary problem with my BlazorFileUpload component converting it to .Net 5. That has been resolved. 
-
-Version 1.5.0 - I updated to .Net 5.
-
-New version 1.4
-Validation Component
-
 New to version 1.3 is a new really cool progress bar that uses all CSS by 
 http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://firchow.net/</Description>
     <Copyright>2021 - Data Juggler - Use For Anything You Want, No Warranty.</Copyright>
@@ -28,7 +21,10 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>10.23.2021
+    <PackageReleaseNotes>10.24.2021
+Version 1.7.0: I updated to version 1.7 since I added a bunch of properties to many components.
+
+10.23.2021
 Version 1.6.7: checking in with a few fixes and properties added for positioning elements.
 
 10.23.2021
@@ -72,7 +68,14 @@ SetCheckBoxValue
 
 1.5.2: I had a problem publishing a .Net 5 project, trying again.
 
+Version 1.5.1: I accidently marked this project as depreciated, when I was having a temporary problem with my BlazorFileUpload component converting it to .Net 5. That has been resolved. 
+
+Version 1.5.0 - I updated to .Net 5.
+
 1.5.0: .Net 5.0 conversion of Nuget packages and Target Framework.
+
+New version 1.4
+Validation Component
 
 1.4.11 - For some reason I added Open and Close curly brackets to a BlazorStyled Class.
 Oops. Time for bed soon.
@@ -162,9 +165,9 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>1.6.7</Version>
-    <AssemblyVersion>1.6.7.0</AssemblyVersion>
-    <FileVersion>1.6.7.0</FileVersion>
+    <Version>1.6.8</Version>
+    <AssemblyVersion>1.7.0.0</AssemblyVersion>
+    <FileVersion>1.7.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
